...
                  _selectedPage = 0;
                });
                Navigator.pop(context);
              },
            ),
            ListTile(
              key: const Key('menu_tv_series'),
              leading: const Icon(Icons.live_tv),
              title: const Text('TV Series'),
              onTap: () {
                setState(() {
                  _selectedPage = 1;
                });
                Navigator.pop(context);
              },
            ),
            ListTile(
              key: const Key('menu_watchlist'),
              leading: const Icon(Icons.save_alt),
              title: const Text('Watchlist'),
              onTap: () {
                scaffoldKey.currentState?.closeDrawer();
                Navigator.pushNamed(context, watchlistRoute);
              },
...
          ],
        ),
      ),
      appBar: AppBar(
        title: const Text('Ditonton'),
        leading: IconButton(
          key: const Key('drawer_icon'),
          icon: const Icon(Icons.menu),
          onPressed: () => scaffoldKey.currentState?.openDrawer(),
        ),
        actions: [
          IconButton(
            onPressed: () {
...
