import 'package:core/core.dart';
import 'package:core/presentation/bloc/bloc_state.dart';
import 'package:flutter/material.dart';
import 'package:flutter_bloc/flutter_bloc.dart';
import 'package:flutter_rating_bar/flutter_rating_bar.dart';
import 'package:tv_series/tv_series.dart';

class TvSeriesDetailPage extends StatefulWidget {
  final int id;
  const TvSeriesDetailPage({super.key, required this.id});

  @override
  State<TvSeriesDetailPage> createState() => _TvSeriesDetailPageState();
}

class _TvSeriesDetailPageState extends State<TvSeriesDetailPage> {
  void initialLoad(int id) {
    if (mounted) {
      context.read<TvSeriesDetailBloc>().add(OnFetchingDetail(id));
      context.read<TvSeriesRecommendationBloc>().add(
        OnFetchingRecommendation(id),
      );
      context.read<TvSeriesWatchlistBloc>().add(OnLoadingWatchlist(id));
    }
  }

  @override
  void initState() {
    super.initState();
    Future.microtask(() {
      initialLoad(widget.id);
    });
  }

  @override
  Widget build(BuildContext context) {
    final watchlistBloc = BlocProvider.of<TvSeriesWatchlistBloc>(context);
    return Scaffold(
      body: BlocListener(
        bloc: watchlistBloc,
        listener: (BuildContext context, BlocState state) {
          if (state is TvSeriesWatchlistHasMessage) {
            if (state.message != null) {
              if (state.message == watchlistAddSuccessMessage ||
                  state.message == watchlistRemoveSuccessMessage) {
                ScaffoldMessenger.of(
                  context,
                ).showSnackBar(SnackBar(content: Text(state.message!)));
              } else {
                showDialog(
                  context: context,
                  builder: (context) {
                    return AlertDialog(content: Text(state.message!));
                  },
                );
              }
            }
          }
        },
        child: BlocBuilder<TvSeriesDetailBloc, BlocState>(
          builder: (context, state) {
            if (state is BlocLoading) {
              return const Center(child: CircularProgressIndicator());
            } else if (state is BlocHasData<TvSeriesDetail>) {
              final tvSeries = state.result;
              return SafeArea(
                child: DetailContent(
                  id: widget.id,
                  tvSeries: tvSeries,
                  initialLoad: initialLoad,
                ),
              );
            } else if (state is BlocError) {
              return Center(
                key: const Key('error_message'),
                child: Text(state.message),
              );
            } else {
              return const SizedBox.shrink();
            }
          },
        ),
      ),
    );
  }
}

class DetailContent extends StatefulWidget {
  final int id;
  final TvSeriesDetail tvSeries;
  final Function initialLoad;

  const DetailContent({
    super.key,
    required this.id,
    required this.tvSeries,
    required this.initialLoad,
  });

  @override
  State<DetailContent> createState() => _DetailContentState();
}

class _DetailContentState extends State<DetailContent> {
  bool isAllSeasonShowing = false;

  @override
  Widget build(BuildContext context) {
    final screenWidth = MediaQuery.of(context).size.width;
    return Stack(
      children: [
        CustomCachedImage(
          key: const Key('image_poster'),
          imageUrl: '$baseImageUrl${widget.tvSeries.posterPath}',
          width: screenWidth,
        ),
        Container(
          margin: const EdgeInsets.only(top: 56),
          child: DraggableScrollableSheet(
            builder: (context, scrollController) {
              return Container(
                decoration: const BoxDecoration(
                  color: kRichBlack,
                  borderRadius: BorderRadius.vertical(top: Radius.circular(16)),
                ),
                child: CustomScrollView(
                  controller: scrollController,
                  slivers: [
                    _detailView(),
                    _seasonHeaderView(),
                    _seasonListView(widget.tvSeries),
                    _recommendationView(),
                  ],
                ),
              );
            },
            minChildSize: 0.25,
          ),
        ),
        Padding(
          padding: const EdgeInsets.all(8.0),
          child: CircleAvatar(
            backgroundColor: kRichBlack,
            foregroundColor: Colors.white,
            child: IconButton(
              icon: const Icon(Icons.arrow_back),
              onPressed: () {
                Navigator.pop(context);
              },
            ),
          ),
        ),
      ],
    );
  }

  Widget _detailView() {
    return SliverToBoxAdapter(
      child: Padding(
        padding: const EdgeInsets.all(16),
        child: Column(
          crossAxisAlignment: CrossAxisAlignment.start,
          children: [
            Center(
              child: Container(
                margin: EdgeInsets.only(bottom: 16),
                color: Colors.white,
                height: 4,
                width: 48,
              ),
            ),
            Text(
              key: Key("tv_series_title"),
              widget.tvSeries.name ?? '',
              style: headlineSmall,
            ),
            _watchlistView(),
            Text(_showGenres(widget.tvSeries.genres ?? [])),
            if (widget.tvSeries.episodeRunTime?.isNotEmpty ?? false)
              Text(_showDuration(widget.tvSeries.episodeRunTime?.first ?? 0)),
            Row(
              children: [
                RatingBarIndicator(
                  rating: (widget.tvSeries.voteAverage ?? 0) / 2,
                  itemCount: 5,
                  itemBuilder: (context, index) =>
                      const Icon(Icons.star, color: kMikadoYellow),
                  itemSize: 24,
                ),
                Text('${widget.tvSeries.voteAverage}'),
              ],
            ),
            const SizedBox(height: 16),
            Text('Overview', style: titleLarge),
            Text(widget.tvSeries.overview ?? ''),
          ],
        ),
      ),
    );
  }

  Widget _watchlistView() {
    return BlocBuilder<TvSeriesWatchlistBloc, BlocState>(
      builder: (context, state) {
        if (state is BlocEmpty) {
          return ElevatedButton(
            onPressed: null,
            child: Row(
              mainAxisSize: MainAxisSize.min,
              children: const [
                Icon(Icons.add),
                SizedBox(width: 8),
                Text('Watchlist'),
              ],
            ),
          );
        } else if (state is TvSeriesWatchlistHasMessage) {
          final isAddedWatchlist = state.isAdded;

          return ElevatedButton(
            onPressed: () async {
              if (isAddedWatchlist == false) {
                context.read<TvSeriesWatchlistBloc>().add(
                  OnAddingWatchlist(widget.tvSeries),
                );
              } else if (isAddedWatchlist == true) {
                context.read<TvSeriesWatchlistBloc>().add(
                  OnRemovingWatchlist(widget.tvSeries),
                );
              }
            },
            child: Row(
              mainAxisSize: MainAxisSize.min,
              children: [
                isAddedWatchlist == true
                    ? const Icon(Icons.check)
                    : const Icon(Icons.add),
                SizedBox(width: 8),
                const Text('Watchlist', key: Key('watchlist_text')),
              ],
            ),
          );
        } else {
          return const SizedBox.shrink();
        }
      },
    );
  }

  Widget _seasonHeaderView() {
    return BlocBuilder<TvSeriesDetailBloc, BlocState>(
      builder: (context, state) {
        final seasonsLength = widget.tvSeries.seasons?.length ?? 0;

        return SliverToBoxAdapter(
          child: Padding(
            padding: const EdgeInsets.fromLTRB(16, 0, 16, 16),
            child: Row(
              mainAxisAlignment: MainAxisAlignment.spaceBetween,
              children: [
                if (seasonsLength > 0)
                  Text(
                    isAllSeasonShowing || seasonsLength == 1
                        ? 'All Season'
                        : 'Last Season',
                    style: titleLarge,
                  ),
                if (seasonsLength > 1)
                  InkWell(
                    key: const Key('season_button_toggle'),
                    onTap: () {
                      setState(() {
                        isAllSeasonShowing = !isAllSeasonShowing;
                      });
                    },
                    child: Padding(
                      padding: const EdgeInsets.all(8.0),
                      child: Row(
                        children: [
                          Text(isAllSeasonShowing ? 'Hide Other' : 'View All'),
                        ],
                      ),
                    ),
                  ),
              ],
            ),
          ),
        );
      },
    );
  }

  Widget _seasonListView(TvSeriesDetail tvSeries) {
    return BlocBuilder<TvSeriesDetailBloc, BlocState>(
      builder: (context, state) {
        if (tvSeries.seasons != null && tvSeries.seasons!.isNotEmpty) {
          final listSeason = isAllSeasonShowing
              ? tvSeries.seasons!
              : [tvSeries.seasons!.last];

          return SliverList(
            delegate: SliverChildBuilderDelegate((context, index) {
              final season = listSeason[index];
              return SeasonCard(tvSeries: tvSeries, season: season);
            }, childCount: listSeason.length),
          );
        } else {
          return const SliverToBoxAdapter(child: SizedBox.shrink());
        }
      },
    );
  }

  Widget _recommendationView() {
    return SliverToBoxAdapter(
      child: Column(
        crossAxisAlignment: CrossAxisAlignment.start,
        children: [
          Padding(
            padding: const EdgeInsets.all(16),
            child: Text('Recommendations', style: titleLarge),
          ),
          BlocBuilder<TvSeriesRecommendationBloc, BlocState>(
            builder: (context, state) {
              if (state is BlocLoading) {
                return const Center(child: CircularProgressIndicator());
              } else if (state is BlocHasData<List<TvSeries>>) {
                return SizedBox(
                  height: 150,
                  child: ListView.builder(
                    scrollDirection: Axis.horizontal,
                    physics: const BouncingScrollPhysics(),
                    padding: const EdgeInsets.only(left: 16),
                    itemBuilder: (context, index) {
                      final tvSeries = state.result[index];
                      return Container(
                        margin: const EdgeInsets.only(right: 16),
                        child: ClipRRect(
                          borderRadius: const BorderRadius.all(
                            Radius.circular(16),
                          ),
                          child: Stack(
                            children: [
                              CustomCachedImage(
                                imageUrl: '$baseImageUrl${tvSeries.posterPath}',
                              ),
                              Positioned.fill(
                                child: Material(
                                  color: Colors.transparent,
                                  child: InkWell(
                                    onTap: () {
                                      widget.initialLoad(tvSeries.id);
                                    },
                                  ),
                                ),
                              ),
                            ],
                          ),
                        ),
                      );
                    },
                    itemCount: state.result.length,
                  ),
                );
              } else if (state is BlocError) {
                return Center(
                  key: const Key('error_message'),
                  child: Text(state.message),
                );
              } else {
                return const SizedBox.shrink();
              }
            },
          ),
          const SizedBox(height: 16),
        ],
      ),
    );
  }

  String _showGenres(List<Genre> genres) {
    String result = '';
    for (var genre in genres) {
      result += '${genre.name}, ';
    }

    if (result.isEmpty) {
      return result;
    }

    return result.substring(0, result.length - 2);
  }

  String _showDuration(int runtime) {
    final int hours = runtime ~/ 60;
    final int minutes = runtime % 60;

    if (hours > 0) {
      return '${hours}h ${minutes}m';
    } else {
      return '${minutes}m';
    }
  }
}
