...

  @override
  Widget build(BuildContext context) {
    return Container(
      margin: const EdgeInsets.symmetric(vertical: 4),
      child: InkWell(
        key: const Key('tv_series_card_item'),
        onTap: () {
          Navigator.pushNamed(
            context,
            detailTvSeriesRoute,
            arguments: tvSeries.id,
          );
...
